Revision history for Perl extension Set::Infinite.

0.50
    fixed: duration() does not try to add 'zero' to object.

0.49
    fixed: "first/last" of intersection between recurrences

0.48
    fixed: backtracking on a partially defined set.
    fixed: first of a union with an empty set.

0.47
    until allows start_set == end_set

0.46_01
    upload to perl-date-time CVS

0.46
    more docs

0.45
    last works, but not for union/quantize/select/offset
0.44_03
    last() can union/intersect/complement/offset
0.44_02
    last() can iterate/complement
0.44_01
    first(n) deprecated
    S::I::Basic::last() enabled

0.44
    CPAN release

0.43_01
    'iterate' generates 'first' code

0.43
    CPAN release
    implemented max() of 'iterate'

0.42_05
    implemented min() of 'iterate'
    fixed complex union with empty set

0.42_04
    finished removing 'our'

0.42_03 / 0.42_02
    (idem)

0.42_01
    more methods inherited from Set::Infinite::Basic

0.42_00
    Set::Infinite.pm refactored into Set::Infinite::Basic
    Set::Infinite::_Simple removed.

0.41_03
    can intersects() to an object (it checks the reference type)

0.41_02
    fixed copy() - copying array refs

0.41_01
    Fixed type() inheritance problems
    as a side effect, type() must be called with '->' syntax
    Fixed eg/recurring.pl

0.41
    'todo' directory renamed to _todo for Win* compatibility 
    (clashes with TODO)

0.40
    LICENSE file

0.39_05
    fixed 'until' test warnings (caused by malformed offset() output)

0.39_04
    'until' works with empty sets
    'until' has first()

0.39_03
    'until' backtracks (slowly)
    left a hack in max() - might remove it when last() works...

0.39_02
    'offset' has 'first'
    'until' has '_quantize_span'

0.39_01
    new method 'until' -- makes it possible to join RRULEs in Date::Set::Timezone
    hacked a fix a problem when offset-begin backtracks (offset-begin reduces
        a set to a single element, which backtracks wrongly if the set were