@@ -69,5 +69,4 @@ test ("first, tail", '"@a"', '[28..29) [32..33),[33..34)');
 @a = defined $a[1] ? $a[1]->first : ();
 test ("first, tail", '"@a"', '[32..33) [33..34)');
 
-
 1;
